Fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
 #glyph {
 	color:white;
 	font-size: 600px;
-	margin-bottom: -144px;
+	margin-bottom: -72px;
 	margin-top: -36px;
 }
 
